; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_vmx.c_is_machine_check.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kvm/extr_vmx.c_is_machine_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INTR_INFO_INTR_TYPE_MASK = common dso_local global i32 0, align 4
@INTR_INFO_VECTOR_MASK = common dso_local global i32 0, align 4
@INTR_INFO_VALID_MASK = common dso_local global i32 0, align 4
@INTR_TYPE_HARD_EXCEPTION = common dso_local global i32 0, align 4
@MC_VECTOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @is_machine_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_machine_check(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @INTR_INFO_INTR_TYPE_MASK, align 4
  %5 = load i32, i32* @INTR_INFO_VECTOR_MASK, align 4
  %6 = or i32 %4, %5
  %7 = load i32, i32* @INTR_INFO_VALID_MASK, align 4
  %8 = or i32 %6, %7
  %9 = and i32 %3, %8
  %10 = load i32, i32* @INTR_TYPE_HARD_EXCEPTION, align 4
  %11 = load i32, i32* @MC_VECTOR, align 4
  %12 = or i32 %10, %11
  %13 = load i32, i32* @INTR_INFO_VALID_MASK, align 4
  %14 = or i32 %12, %13
  %15 = icmp eq i32 %9, %14
  %16 = zext i1 %15 to i32
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
